<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SmartScan</string>

    <string name="title">Scan</string>
    <string name="scan_tip">Place the code within the frame</string>
    <string name="scan_showresult">Scan results will show on screen</string>

    <!-- scan functions title-->
    <string name="fun_document">Document</string>
    <string name="fun_translate">Translate</string>
    <string name="fun_scan">ScanCode</string>
    <string name="fun_recognition">Recognition</string>
    <string name="fun_card">Card</string>

    <!--Settings preferences title-->
    <string name="settings_title">Settings</string>

    <string name="settings_border">Document recognition auto adjust border</string>
    <string name="settings_qrcode">Generate QR code</string>
    <string name="settings_card">My Card</string>
    <string name="settings_document">My Document</string>

    <string name="settings_privacy_policy">Privacy Policy (Concise Version)</string>
    <string name="settings_personal_information">Personal Information Collection Checklist</string>
    <string name="settings_partners_shared">Instructions for Third-Party Partners and Shared Information</string>
    <string name="settings_permission">Permission application and usage description</string>
    <string name="settings_about">About</string>

    <!--Generate QR code-->
    <string name="generate_qr_code_title">Generate QR code</string>
    <string name="generate_qr_code_hint">Enter text content</string>

    <!--Settings Card-->
    <string name="card_identity">Identity Card</string>
    <string name="card_bussiness">Business Card</string>

    <!--Settings about preferences title-->
    <string name="about_updates_title">Check for updates</string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_user_agreement_title">User Agreement</string>

    <!--multi select header-->
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect all</string>
    <string name="single_select_title"><xliff:g id="count">%1$d</xliff:g> item selected</string>
    <string name="multi_select_titles"><xliff:g id="count">%1$d</xliff:g> items selected</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_share">Share</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>

    <string name="empty_view_tip">No Content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>