<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <SwitchPreference
        android:key="settings_border_key"
        android:title="@string/settings_border" />

    <Preference
        android:key="settings_qrcode_key"
        android:title="@string/settings_qrcode"
        android:widgetLayout="@layout/icon_next" />

    <Preference
        android:key="settings_card_key"
        android:title="@string/settings_card"
        android:widgetLayout="@layout/icon_next" />

    <Preference
        android:key="settings_document_key"
        android:title="@string/settings_document"
        android:widgetLayout="@layout/icon_next" />

    <PreferenceCategory>

        <Preference
            android:key="settings_privacy_policy_key"
            android:title="@string/settings_privacy_policy"
            android:widgetLayout="@layout/icon_next" />

        <Preference
            android:key="settings_personal_information_key"
            android:title="@string/settings_personal_information"
            android:widgetLayout="@layout/icon_next" />

        <Preference
            android:key="settings_partners_shared_key"
            android:title="@string/settings_partners_shared"
            android:widgetLayout="@layout/icon_next" />

        <Preference
            android:key="settings_permission_key"
            android:title="@string/settings_permission"
            android:widgetLayout="@layout/icon_next" />

        <Preference
            android:key="settings_about_key"
            android:title="@string/settings_about"
            android:widgetLayout="@layout/icon_next" />

    </PreferenceCategory>

</PreferenceScreen>