<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/rim"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/flush_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:gravity="center"
                android:src="@drawable/ic_flashlight_off" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:background="#FF000000"
                android:alpha="0.1" />

            <TextView
                android:layout_width="220dp"
                android:layout_height="20dp"
                android:layout_above="@id/scan_area"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/scan_tip"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/scan_area"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:background="@drawable/cloors" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#000000"
            android:gravity="center_vertical">


            <TextView
                android:layout_toEndOf="@+id/settings_img"
                android:layout_toStartOf="@+id/img_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:padding="12dp"
                android:src="@drawable/ic_photo" />

            <ImageView
                android:id="@+id/settings_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:padding="12dp"
                android:src="@drawable/ic_settings" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignParentBottom="true"
                android:background="#000000">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/fun_document"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/fun_title_size" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/fun_translate"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/fun_title_size" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/fun_scan"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/fun_title_size" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/fun_recognition"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/fun_title_size" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/fun_card"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/fun_title_size" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:src="@drawable/ic_shot" />

            </RelativeLayout>

        </RelativeLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="600dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:behavior_peekHeight="60dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_result_view_bg"
            android:orientation="vertical"
            android:showDividers="beginning">

            <ImageView
                android:id="@+id/iv_slide"
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_swipe_up" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tv_result_titile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="扫描结果"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_slide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_cancel" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="result"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
